eks_llm_sample/app/llm-gateway/config/kong-route-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-route-gateway
  namespace: llm-gateway
  annotations:
    konghq.com/strip-path: 'true'
spec:
  ingressClassName: kong
  rules:
  - host: llm-gateway.yugaozh-flow.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: llm-gateway
            port:
              number: 3000
